# CareerOS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  V1_RELEASE_NOTES.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  DECISIONS.md  PROJECT_CONTEXT.md  ROADMAP.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
infra/docker/: api.Dockerfile
migrations/: env.py
migrations/versions/: 20260613_0001_initial_schema.py  20260613_0002_fact_staging_pipeline.py  20260618_0003_verification_claim_promotion.py  20260618_0004_internship_ingestion_foundation.py  20260618_0005_normalization_skill_extraction.py  (+5 more)
prompts/: implement_sprint.md  release_check.md  review_diff.md
samples/: demo_internships.json  demo_resume.txt
scripts/: check_embeddings.py  check_sources.py  doctor.py  evaluate_matching_quality.py  list_applications.py  reset_demo_data.py  run_job_discovery.py  run_v1_demo.py  start-api.sh  sync_source.py  validate_v1.py
src/careeros/api/: deps.py  (+1 more)
tests/: conftest.py  test_application_tracker.py  test_completion_scripts.py  test_documents.py  test_embedding_provider.py  test_embeddings_retrieval.py  test_extraction.py  test_gap_analysis.py  test_health.py  test_internship_ingestion.py  test_job_discovery_pipeline.py  test_matching_engine.py  test_normalization_skill_extraction.py  test_profiles.py  test_reset_demo_data.py  test_resume_generation.py  test_source_adapters.py  test_v1_demo_pipeline.py  test_verification.py
(+70 files in other folders)
